# assign

./: README.md  constants.py  helpers.py  main.py  predict.py  pyproject.toml  transform.py
data/: bot-hunter-dataset.tsv  holdout.csv  sample_input.tsv  test.csv  train.csv
data/output/: output_20250715_231928.tsv  output_20250715_231928_report.txt  output_20250716_001816.tsv  output_20250716_001816_report.txt
models/: iso_forest.pkl  svd_model.pkl
notebooks/: 00_data_prep.ipynb  01-1-initial_automated_eda.html  01_eda.ipynb  02_feature_engineering.ipynb  03-1_lime_explanation.html  03_modelling.ipynb
