[tool.poetry]
name = "assign"
version = "0.1.0"
description = ""
authors = ["neagrita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tld = "^0.13.1"
fasttext = "^0.9.3"
pandas = "^2.3.1"
scikit-learn = "^1.7.0"

[tool.poetry.group.eda.dependencies]
sweetviz = "^2.3.1"
seaborn = "^0.13.2"
ydata-profiling = {version = "^4.16.1", python = ">=3.12,<3.13"}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.4.4"
ipykernel = "^6.29.5"
isort = "^6.0.1"
ruff = "^0.12.2"


[tool.poetry.group.modelling.dependencies]
kneed = "^0.8.5"
umap-learn = "^0.5.9.post2"
shap = "^0.48.0"
lime = "^0.2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E", "F", "W"]
line-length = 88
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
